--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bluebird": "^3.5.30",
+    "@types/node": "^13.11.0",
+    "@types/validator": "^12.0.1",
     "apollo-server": "^2.11.0",
     "graphql": "^15.0.0",
+    "mariadb": "^2.3.1",
+    "sequelize": "^5.21.6",
+    "sequelize-cli": "^5.5.1",
     "x-ray": "^2.3.4"
   },
   "devDependencies": {
